# gaffer

./: .gitignore  CMakeLists.txt  buildWindows.bat
cmake/: FindCortex.cmake
contrib/cmake/: CMakeLists.txt  buildWindows.bat
include/Gaffer/: Animation.h  ArrayPlug.h  CompoundDataPlug.h  Context.h  ContextAlgo.h  ContextMonitor.h  Expression.h  FileSystemPath.h  FileSystemPathPlug.h  Monitor.h  Path.h  PerformanceMonitor.h  Process.h  ScriptNode.h  Switch.inl  TypeIds.h
include/GafferArnold/: ArnoldMeshLight.h
include/GafferArnold/Private/IECoreArnoldPreview/: ShaderAlgo.h
include/GafferBindings/: MetadataBinding.h  Serialisation.h  SignalBinding.inl
include/GafferCortex/: ParameterHandler.h  ParameterisedHolder.h
include/GafferDelight/IECoreDelightPreview/: NodeAlgo.h  ParameterList.h
include/GafferDispatch/: Dispatcher.h  TaskNode.h
include/GafferImage/: BufferAlgo.h  BufferAlgo.inl  Catalogue.h  FilterAlgo.h  Format.h  ImageAlgo.h  ImagePlug.h  ImageProcessor.h  ImageReader.h  ImageWriter.h  LUT.h  OpenImageIOReader.h  Shuffle.h  Text.h
include/GafferImageUI/: ImageGadget.h
include/GafferScene/: Camera.h  CollectScenes.h  DeleteCurves.h  DeleteFaces.h  DeletePoints.h  DeleteSets.h  Encapsulate.h  EvaluateLightLinks.h  ExternalProcedural.h  FilterPlug.h  GlobalsProcessor.h  Group.h  Instancer.h  Isolate.h  Light.h  LightToCamera.h  MeshTangents.h  Parent.h  Prune.h  ResamplePrimitiveVariables.h  SceneElementProcessor.h  ScenePlug.h  SceneProcessor.h  SceneReader.h  SceneWriter.h  SubTree.h  Text.h
include/GafferScene/Private/IECoreScenePreview/: Procedural.h  Renderer.h
include/GafferSceneUI/: AttributeVisualiser.h  StandardLightVisualiser.h
include/GafferUI/: GraphGadget.h  Handle.h  ImageGadget.h  KeyEvent.h  NodeGadget.h  Pointer.h  RotateHandle.h  ScaleHandle.h  TranslateHandle.h  ViewportGadget.h
python/GafferAppleseedTest/: AppleseedRenderTest.py
python/GafferArnold/: __init__.py
python/GafferArnoldTest/: ArnoldRenderTest.py  ArnoldShaderTest.py
python/GafferCortexTest/: OpMatcherTest.py
python/GafferCortexUI/: ParameterPresets.py
python/GafferDispatch/: LocalDispatcher.py  SystemCommand.py
python/GafferDispatchTest/: DispatchApplicationTest.py  ExecuteApplicationTest.py
python/GafferImageTest/: ColorSpaceTest.py  DisplayTest.py  DisplayTransformTest.py  ImageReaderTest.py  ImageWriterTest.py
python/GafferOSLTest/: OSLTestCase.py
python/GafferSceneUI/: ShaderUI.py
python/GafferTest/: ApplicationTest.py  FileSystemPathInOutNode.py  FileSystemPathPlugTest.py  FileSystemPathTest.py  PythonApplicationTest.py  ScriptNodeTest.py  StatsApplicationTest.py  TestFileSystemPathPlug.py  __init__.py
python/GafferUI/: Bookmarks.py  DocumentationAlgo.py  FileMenu.py  FileSystemPathPlugValueWidget.py  GLWidget.py  Image.py  PathChooserDialogue.py  PathChooserWidget.py  UserPlugs.py  _StyleSheet.py
python/GafferVDBTest/: VDBTestCase.py
src/Gaffer/: Context.cpp  DeleteContextVariablesNode.cpp  FileSystemPath.cpp  FileSystemPathPlug.cpp  Path.cpp  Process.cpp  ScriptNode.cpp  Switch.cpp
src/GafferBindings/: ArrayPlugBinding.cpp  SetBinding.cpp  SignalBinding.cpp
src/GafferDispatch/: Dispatcher.cpp
src/GafferImage/: Catalogue.cpp  FormatData.cpp  ImageReader.cpp  ImageWriter.cpp  LUT.cpp  OpenImageIOReader.cpp  Text.cpp
src/GafferImageBindings/: CopyChannelsBinding.cpp  DeleteChannelsBinding.cpp  FormatDataBinding.cpp  ImageProcessorBinding.cpp  MergeBinding.cpp  MixBinding.cpp  ShapeBinding.cpp  TextBinding.cpp
src/GafferImageModule/: CatalogueBinding.cpp  CoreBinding.cpp  FilterAlgoBinding.cpp  ImageProcessorBinding.cpp
src/GafferImageUI/: ImageView.cpp
src/GafferModule/: ArrayPlugBinding.cpp  FileSystemPathPlugBinding.cpp  FileSystemPathPlugBinding.h  GafferModule.cpp  PathBinding.cpp  ScriptNodeBinding.cpp  Transform2DPlugBinding.cpp
src/GafferOSL/: OSLCode.cpp  OSLExpressionEngine.cpp
src/GafferOSLModule/: GafferOSLModule.cpp
src/GafferScene/: ExternalProcedural.cpp  InteractiveRender.cpp  Outputs.cpp  SceneReader.cpp  SceneWriter.cpp  Text.cpp
src/GafferSceneBindings/: PathMatcherDataBinding.cpp  SceneProcessorBinding.cpp  SetAlgoBinding.cpp
src/GafferSceneModule/: CoreBinding.cpp
src/GafferSceneUI/: CameraVisualiser.cpp  ContextAlgo.cpp
src/GafferSceneUIBindings/: ContextAlgoBinding.cpp
src/GafferUI/: GraphGadget.cpp  ImageGadget.cpp  NoduleLayout.cpp  Pointer.cpp  StandardGraphLayout.cpp  ViewportGadget.cpp
src/GafferUIBindings/: GraphGadgetBinding.cpp  PathListingWidgetBinding.cpp
src/GafferUIModule/: GraphGadgetBinding.cpp  PathListingWidgetBinding.cpp  PathListingWidgetBinding.h
startup/gui/: menus.py
